--- a/installation.html
+++ b/installation.html
@@ -20,7 +20,7 @@ bodyclass: installation
                                  <li class="active">
                   <a href="#overview">Overview</a>
                   <ul class="nav">
-                    <li class=""><a href="#overview-doctype">HTML5 doctype</a></li>
+                    <li class="active"><a href="#overview-doctype">HTML5 doctype</a></li>
                     <li class=""><a href="#overview-mobile">Mobile first</a></li>
                     <li class=""><a href="#overview-responsive-images">Responsive images</a></li>
                     <li class=""><a href="#overview-type-links">Type and links</a></li>
