Adding email docs & doing some basic updates

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ bodyclass: home
     <h1>The Ghost Guide</h1>
     <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
     <p>
-      <a href="getting-started/" class="btn btn-success btn-large">Click Here to Get Started</a>
+      <a href="installation/" class="btn btn-success btn-large">Click Here to Get Started</a>
     </p>
   </div>
 </div>
