--- a/mail.html
+++ b/mail.html
@@ -7,7 +7,9 @@ bodyclass: email
 <header class="bs-header">
     <div class="container">
         <h1>Setting up Email</h1>
-        <p>How to configure Ghost to send email.</p>
+        <p>Sending email from Node.js is a little bit more complicated than you might be used to. If you see an error message about your email configuration in your Ghost install - you will need to setup an external email provider so that Ghost can send you system emails (for example, if you ever need to reset your password).</p>
+        <p>To do this, sign up for <a href="https://sendgrid.com/user/signup">an account with SendGrid</a> - don't worry - it's free! Once you've got your account details, edit your Ghost config.js to include your SendGrid account details.</p>
+        <p>That's it!</p>
     </div>
 </header>
 
