--- a/installation.html
+++ b/installation.html
@@ -32,6 +32,10 @@ bodyclass: installation
 
             <h1 id="overview">Overview</h1>
 
+            <p>The Ghost documentation is very much a work in progress, it is updated and improved regularly. If you get stuck or have suggestions for improvements, let us know.</p>
+
+            <p>Ghost is built on <a href="http:://nodejs.org">Node</a>, a relatively new technology.</p>
+
             <p>Running Ghost locally on your computer is straight forward, but requires that you install Node.js first.</p>
 
             <h1 id="install-node">Installing Node.js</h1>
