Structural updates to docs
- no changes to actual wording

--- a/help.html
+++ b/help.html
@@ -2,14 +2,9 @@
 title: Setup Email
 layout: default
 bodyclass: email
+heading: Help & Support
+subheading: How to get help with Ghost.
 ---
-
-<header class="bs-header">
-    <div class="container">
-        <h1>Help & Support</h1>
-        <p>How to get help with Ghost.</p>
-    </div>
-</header>
 
 <div class="container">
     <div class="row">
@@ -26,6 +21,9 @@ bodyclass: email
                 </ul>
             </nav>
         </aside>
+
+
+
         <section id="content" class="col-lg-9">
             <h1 id="help">Help</h1>
         </section>
