--- a/installation.html
+++ b/installation.html
@@ -2,14 +2,9 @@
 title: Installing Ghost
 layout: default
 bodyclass: installation
+heading: Installing Ghost &amp; Getting Started
+subheading: The first steps to setting up your new blog for the first time.
 ---
-
-<header class="bs-header">
-    <div class="container">
-        <h1>Installing Ghost &amp; Getting Started</h1>
-        <p>The first steps to setting up your new blog for the first time.</p>
-    </div>
-</header>
 
 <div class="container">
     <div class="row">
@@ -38,19 +33,19 @@ bodyclass: installation
 
             <p>Running Ghost locally on your computer is straight forward, but requires that you install Node.js first.</p>
 
-            <h1 id="install-node">Installing Node.js</h1>
+            <h2 id="install-node">Installing Node.js</h2>
 
             <p>Ghost requires node <code>0.10.*</code>. To get it visit <a href="http://nodejs.org">http://nodejs.org</a> and press 'install' to download the latest version of Node.js.</p>
 
-            <h2>Windows</h2>
+            <h3>Windows</h3>
 
             <p>The install button will download an <code>.msi</code> installer file. Double click this and follow the instructions to install Node.js as you would any other software.</p>
 
-            <h2>Mac</h2>
+            <h3>Mac</h3>
 
             <p>The install button will download a <code>.dmg</code>. Install this as you would any other software.</p>
 
-            <h1 id="install-ghost">Installing Ghost</h1>
+            <h2 id="install-ghost">Installing Ghost</h2>
 
             <p>Download the latest version of Ghost from <a href="http://ghost.org">Ghost.org</a>. Unzip the archive to a memorable location.</p>
 
@@ -61,7 +56,7 @@ bodyclass: installation
             </ol>
 
 
-            <h1 id="run-ghost">Running Ghost</h1>
+            <h2 id="run-ghost">Running Ghost</h2>
 
             <ol>
                 <li>In the Terminal / Command Prompt, type <code>npm start</code></li>
