--- a/mail.html
+++ b/mail.html
@@ -2,14 +2,8 @@
 title: Setup Email
 layout: default
 bodyclass: email
+heading: Setting up Email
 ---
-
-<header class="bs-header">
-    <div class="container">
-        <h1>Setting up Email</h1>
-    </div>
-</header>
-
 
 <div class="container">
     <div class="row">
