--- a/usage.html
+++ b/usage.html
@@ -2,14 +2,9 @@
 title: Using Ghost
 layout: default
 bodyclass: usage
----
+heading: Using Ghost
 
-<header class="bs-header">
-    <div class="container">
-        <h1>Installing Ghost &amp; Getting Started</h1>
-        <p>The first steps to setting up your new blog for the first time.</p>
-    </div>
-</header>
+---
 
 <div class="container">
     <div class="row">
@@ -18,21 +13,16 @@ bodyclass: usage
                 <ul class="nav bs-sidenav">
 
                     <li class="active">
-                        <a href="#overview">Overview</a>
                         <ul class="nav">
-                            <li class="active"><a href="#overview-doctype">HTML5 doctype</a></li>
-                            <li class=""><a href="#overview-mobile">Mobile first</a></li>
-                            <li class=""><a href="#overview-responsive-images">Responsive images</a></li>
-                            <li class=""><a href="#overview-type-links">Type and links</a></li>
-                            <li class=""><a href="#overview-normalize">Normalize</a></li>
-                            <li class=""><a href="#overview-container">Container</a></li>
+                            <li class="active"><a href="#running-ghost">Running Ghost</a></li>
+                            <li><a href="#config-ghost">Configuring Ghost</a></li>
                         </ul>
                     </li>
                 </ul>
             </nav>
         </aside>
         <section id="content" class="col-lg-9">
-            <h1>Running Ghost</h1>
+            <h2 id="running-ghost">Running Ghost</h2>
 
             <ol>
                 <li>Go to <code>&lt;your URL&gt;/ghost/signup/</code></li>
@@ -42,11 +32,11 @@ bodyclass: usage
 
             <p>You should now be logged into your Admin control.</p>
 
-            <h2>Configuring Ghost</h2>
+            <h2 id="config-ghost">Configuring Ghost</h2>
 
             <p>Go to <code>&lt;your URL&gt;/ghost/settings/</code>.</p>
 
-            <h2>Blog Settings (<code>/general/</code>)</h2>
+            <h3>Blog Settings (<code>/general/</code>)</h3>
 
             <p>These are the Blog specific settings</p>
 
@@ -61,7 +51,7 @@ bodyclass: usage
 
             <p>This will update all your Blog settings, you can check these by visiting your Blog URL.</p>
 
-            <h2>User Settings (<code>/user/</code>)</h2>
+            <h3>User Settings (<code>/user/</code>)</h3>
 
             <p>These are the settings that control your User profile.</p>
 
