Quick update to theme docs

--- a/themes.html
+++ b/themes.html
@@ -26,9 +26,11 @@ subheading: Get started creating your own themes for Ghost
 
             <h2>What is Handlebars?</h2>
 
-            <p><a href="http://handlebarsjs.com/">Handlebars</a> is the Templating language used by Ghost.</p>
+            <p><a href="http://handlebarsjs.com/">Handlebars</a> is the templating language used by Ghost.</p>
 
             <blockquote><p>Handlebars provides the power necessary to let you build semantic templates effectively with no frustration.</p></blockquote>
+
+            <p>If you’re looking to get started writing your own theme, you’ll probably want to get yourself familiar with handlebars syntax first. Have a read of the <a href="http://handlebarsjs.com/expressions.html">handlebars documentation</a>, or checkout this <a href="http://blog.teamtreehouse.com/getting-started-with-handlebars-js">tutorial from Treehouse</a> – you can skip the first section on installation and usage (we’ve done that bit for you) and get stuck in with ‘Basic Expressions’.</p>
 
             <h2 id="file-structure">The File Structure of a Ghost Theme</h2>
 
@@ -86,6 +88,8 @@ subheading: Get started creating your own themes for Ghost
                 <li>Cick 'Save'.</li>
                 <li>Go to your Blog URL and check the theme as be updated.</li>
             </ol>
+
+
 
         </section>
     </div>
