Beginning quickstart for devs & minor install update

--- a/installation.html
+++ b/installation.html
@@ -35,7 +35,9 @@ subheading: The first steps to setting up your new blog for the first time.
 
             <h2 id="install-node">Installing Node.js</h2>
 
-            <p>Ghost requires node <code>0.10.*</code>. To get it visit <a href="http://nodejs.org">http://nodejs.org</a> and press 'install' to download the latest version of Node.js.</p>
+            <p>Ghost requires node <code>0.10.*</code> (latest stable version).</p>
+
+            <p>To get it visit <a href="http://nodejs.org">http://nodejs.org</a> and press 'install' to download the latest stable version of Node.js.</p>
 
             <h3>Windows</h3>
 
