--- a/quickstart.html
+++ b/quickstart.html
@@ -2,14 +2,9 @@
 title: Ghost Quickstart
 layout: default
 bodyclass: installation
+heading: Ghost Quickstart
+subheading: Get up and running with Ghost.
 ---
-
-<header class="bs-header">
-    <div class="container">
-        <h1>Ghost Quickstart</h1>
-        <p>Get up and running with Ghost.</p>
-    </div>
-</header>
 
 <div class="container">
     <div class="row">
@@ -36,17 +31,15 @@ bodyclass: installation
 
             <h2 id="ghost-local">Get Ghost running locally</h2>
 
-            <p>Ghost requires node <code>0.10.*</code>. If you haven't already got it, head over to <a href="http://nodejs.org">http://nodejs.org</a> and download the latest version of Node.js. The installer will set up both Node and Node's excellent package manager, npm.</p>
+            <p>Ghost requires node <code>0.10.*</code> (the latest stable version).</p>
+
+            <p>If you haven't already got it, head over to <a href="http://nodejs.org">http://nodejs.org</a> and download the latest version of Node.js. The installer will set up both Node and Node's excellent package manager, npm.</p>
 
             <p>Download the latest version of Ghost from <a href="http://ghost.org">Ghost.org</a>. Unpack the archive to a folder where you'd like to run Ghost - anywhere will do!</p>
 
-            <p></p>
+            <p>Fire up your terminal (mac/linux) or command prompt (windows) and navigate to the root directory of your unpacked Ghost archive (where package.json lives).</p>
 
-            <ol>
-                <li>Open Terminal / Command Prompt</li>
-                <li>Navigate to your Ghost directory</li>
-                <li>Then enter <code>npm install --production</code></li>
-            </ol>
+            <p>To install Ghost, run <code>npm install --production</code></p>
 
             <h2 id="customise">Customise & Configure Ghost</h2>
 
