--- a/quickstart.html
+++ b/quickstart.html
@@ -35,13 +35,15 @@ subheading: Get up and running with Ghost.
 
             <p>If you haven't already got it, head over to <a href="http://nodejs.org">http://nodejs.org</a> and download the latest version of Node.js. The installer will set up both Node and Node's excellent package manager, npm.</p>
 
+            <p>For users on Linux, rather than installing from the .tar.gz archive, you may want to <a href="https://github.com/joyent/node/wiki/Installing-Node.js-via-package-manager">install from a package manager</a></p>
+
             <p>Download the latest version of Ghost from <a href="http://ghost.org">Ghost.org</a>. Unpack the archive to a folder where you'd like to run Ghost - anywhere will do!</p>
 
             <p>Fire up your terminal (mac/linux) or command prompt (windows) and navigate to the root directory of your unpacked Ghost archive (where package.json lives).</p>
 
             <p>To install Ghost, run <code>npm install --production</code></p>
 
-            <h2 id="customise">Customise & Configure Ghost</h2>
+            <!--<h2 id="customise">Customise & Configure Ghost</h2>
 
             <h2 id="ghost-deploy">Deploy Ghost</h2>
 
