--- a/help.html
+++ b/help.html
@@ -13,7 +13,6 @@ subheading: How to get help with Ghost.
                 <ul class="nav bs-sidenav">
 
                     <li class="active">
-                        <a href="#">Overview</a>
                         <ul class="nav">
                             <li class="active"><a href="#help">Help</a></li>
                         </ul>
@@ -25,7 +24,10 @@ subheading: How to get help with Ghost.
 
 
         <section id="content" class="col-lg-9">
-            <h1 id="help">Help</h1>
+            <h2 id="help">Help</h2>
+
+            <p>The best place to get help and support is the <a href="http://ghost.org/forum">forum</a> where the Ghost team are on hand to answer your questions.</p>
+
         </section>
     </div>
 </div>
