--- a/installation.html
+++ b/installation.html
@@ -7,7 +7,7 @@ subheading: The first steps to setting up your new blog for the first time.
 ---
 
 <div class="container">
-    <div class="row">
+    <div class="row">                                                                                                                                          x
         <aside id="sidebar" class="col-lg-3">
             <nav class="bs-sidebar">
                 <ul class="nav bs-sidenav">
@@ -18,6 +18,7 @@ subheading: The first steps to setting up your new blog for the first time.
                             <li class="active"><a href="#install-mac">Mac</a></li>
                             <li class=""><a href="#install-windows">Windows</a></li>
                             <li class=""><a href="#install-linux">Linux</a></li>
+                            <li class=""><a href="#deploy">Live Server</a></li>
                             <li class=""><a href="#troubleshooting">Troubleshooting</a></li>
                         </ul>
                     </li>
@@ -60,7 +61,7 @@ subheading: The first steps to setting up your new blog for the first time.
                 <li>In finder, double-click on the downloaded zip file to extract it.</li>
                 <li>Next, grab the newly extracted 'ghost-#.#.#' folder and drag it onto the tab bar of your open terminal window, this will make a new terminal tab which is open at the correct location.</li>
                 <li>In the new terminal tab type <code>npm install --production</code> (note the two dashes).</li>
-                <li>When npm is finished installing, type <code>npm start</code> to start Ghost</li>
+                <li>When npm is finished installing, type <code>npm start</code> to start Ghost in development mode</li>
                 <li>In a browser, navigate to <code>127.0.0.1:2368</code> to see your newly setup Ghost blog</li>
                 <li>Change the url to <code>127.0.0.1:2368/ghost</code> and create your admin user to login to the Ghost admin.</li>
                 <li>See the <a href="/usage">usage docs</a> for instructions on the next steps</li>
@@ -88,7 +89,7 @@ subheading: The first steps to setting up your new blog for the first time.
                 <li>When the folder opens, double-click on the downloaded zip file to extract it.</li>
                 <li>In the Node command prompt, type <code>cd ~/Downloads/ghost-#.#.#</code> where the version number is the version you downloaded.</li>
                 <li>In the command prompt type <code>npm install --production</code> (note the two dashes).</li>
-                <li>When npm is finished installing, type <code>npm start</code> to start Ghost</li>
+                <li>When npm is finished installing, type <code>npm start</code> to start Ghost in development mode</li>
                 <li>In a browser, navigate to <code>127.0.0.1:2368</code> to see your newly setup Ghost blog</li>
                 <li>Change the url to <code>127.0.0.1:2368/ghost</code> and create your admin user to login to the Ghost admin.</li>
                 <li>See the <a href="/usage">usage docs</a> for instructions on the next steps</li>
@@ -106,15 +107,47 @@ subheading: The first steps to setting up your new blog for the first time.
             <h3>Install and Run Ghost</h3>
 
             <ul>
-                <li>Log in to <a href="http://ghost.org">http://ghost.org</a>, and then click the blue 'Download Ghost Source Code' button.</li>
-                <li>On the downloads page, press the button to download the latest zip file & then extract the file to the location you want to run Ghost from.</li>
-                <li>In a terminal window, change directory to the root of the extracted Ghost folder.</li>
-                <li>In the terminal type <code>npm install --production</code> (note the two dashes).</li>
-                <li>When npm is finished installing, type <code>npm start</code> to start Ghost</li>
+                <li>Log in to <a href="http://ghost.org">http://ghost.org</a>, and then click the blue 'Download Ghost Source Code' button</li>
+                <li>On the downloads page, press the button to download the latest zip file & then extract the file to the location you want to run Ghost from</li>
+                <li>In a terminal window, change directory to the root of the extracted Ghost folder</li>
+                <li>In the terminal type <code>npm install --production</code> (note the two dashes)</li>
+                <li>When npm is finished installing, type <code>npm start</code> to start Ghost in development mode</li>
                 <li>In a browser, navigate to <code>127.0.0.1:2368</code> to see your newly setup Ghost blog</li>
-                <li>Change the url to <code>127.0.0.1:2368/ghost</code> and create your admin user to login to the Ghost admin.</li>
-                <li>See the <a href="/usage">usage docs</a> for instructions on the next steps</li>
+                <li>Change the url to <code>127.0.0.1:2368/ghost</code> and create your admin user to login to the Ghost admin</li>
             </ul>
+
+            <p>If you are using linux as a guest OS or through SSH and only have the terminal, then:</p>
+
+            <ul>
+                <li>Use your normal operating system to find the URL of the Ghost zip file (it changes with each version), save the url but change '/zip/' to '/archives/'</li>
+                <li>In the terminal use <code>wget url-of-ghost.zip</code> to download Ghost</li>
+                <li>Unzip the archive with <code>unzip -uo Ghost-#.#.#.zip -d ghost</code>, and then <code>cd ghost</code></li>
+                <li>Type <code>npm install --production</code> (note the two dashes) to install Ghost</li>
+                <li>When npm is finished installing, type <code>npm start</code> to start Ghost in development mode</li>
+                <li>Ghost will now be running on localhost</li>
+            </ul>
+
+            <h2 id="deploy">Putting Ghost on a Live Server</h2>
+
+            <p>So you're ready to get Ghost live? Excellent!</p>
+
+            <p>You're going to need a hosting package that already has, or will allow you to install Node.js. This means something like a cloud (Amazon EC2, DigitalOcean), VPS (Webfaction, Dreamhost) or other package that has SSH (terminal) access & will allow you to install Node. There are plenty around and they can be very cheap.</p>
+
+            <p>What won't work at the moment, is cPanel-style shared hosting as this is usually aimed specifically at hosting PHP. Although some offer Ruby, and so may offer Node in the future as they are somewhat similar.
+
+            <p>Additionally, several of the Node-specific cloud hosting solutions such as Nodejitsu & Heroku will work at first, but they will delete your files and therefore all image uploads and your database will disappear. Heroku supports MySQL so you could use this, but you will still lose any uploaded images.</p>
+
+            <p>The following links contain instructions on how to get up and running with:
+                <ul>
+                    <li><a href="http://www.howtoinstallghost.com/how-to-install-ghost-on-dreamhost/">Dreamhost</a> - from <a href="http://howtoinstallghost.com">howtoinstallghost.com</a></li>
+                    <li><a href="http://ghosted.co/install-ghost-digitalocean/">DigitalOcean</a> - from <a href="http://ghosted.co">Corbett Barr</a></li>
+                    <li><a href="http://www.howtoinstallghost.com/how-to-install-ghost-on-webfaction-hosting/">Webfaction</a> - from <a href="http://howtoinstallghost.com">howtoinstallghost.com</a></li>
+                    <li><a href="http://ghost.pellegrom.me/installing-ghost-on-ubuntu/">Rackspace</a> (Ubuntu 13.04 + linux service) - from <a href="http://ghost.pellegrom.me/">Gilbert Pellegrom</a></li>
+                    <li><a href="http://0v.org/installing-ghost-on-ubuntu-nginx-and-mysql/">Ubuntu + nginx + forever</a> - from <a href="http://0v.org/">Gregg Housh</a></li>
+                    <li>...check the <a href="https://en.ghost.org/forum/installation">installation forum</a> for more guides ...</li>
+                </ul>
+            </p>
+
 
             <h2 id="troubleshooting">Troubleshooting / FAQ</h2>
 
@@ -129,6 +162,14 @@ subheading: The first steps to setting up your new blog for the first time.
                         <li>Add <code>export $PATH=$PATH:/usr/local/bin/</code> at the end of the file and save it</li>
                         <li>This new setting will get loaded when a new terminal starts, so open a new terminal tab or window and type <code>echo $PATH</code> to see that '/usr/local/bin/' is now present.</li>
                     </ul>
+                </dd>
+                <dt id="sqlite3-errors">SQLite3 doesn't install</dt>
+                <dd>
+                    <p>The SQLite3 package comes with pre-built binaries for the most common architectures. If you are using a less popular linux or other unix flavor, you may find that SQLite3 will give you a 404 as it cannot find a binary for your platform.</p>
+                    <p>This can be fixed by forcing SQLite3 to compile. This will require python & gcc. Try it out by running <code>npm install sqlite3 --build-from-source</code></p>
+                    <p>If it won't build you're probably missing one of the python or gcc dependencies, on linux try running <code>sudo npm install -g node-gyp</code>, <code>sudo apt-get install build-essential</code> and <code>sudo apt-get install python-software-properties python g++ make</code> before retrying the build from source.</p>
+                    <p>For more information about building the binaries please see: <a href="https://github.com/developmentseed/node-sqlite3/wiki/Binaries">https://github.com/developmentseed/node-sqlite3/wiki/Binaries</a></p>
+                    <p>Once you have successfully built a binary for your platform, please follow the <a href="https://github.com/developmentseed/node-sqlite3/wiki/Binaries#creating-new-binaries">instructions here</a> to submit the binary to the node-sqlite project, so that future users won't have the same problem.</p>
                 </dd>
             </dl>
         </section>
